2007-05-30  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.16
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2007-05-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tclUnixThrd.c (Tcl_JoinThread): fix for 64-bit handling of
	pthread_join exit return code storage. [Bug 1712723]

2007-05-24  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.15 TAGGED FOR RELEASE ***

	* generic/tclIO.c:	Backport memleak fix in TclFinalizeIOSubsystem.

2007-05-17  Don Porter  <dgp@users.sourceforge.net>

	* tests/fCmd.test:	Backport the notNetworkFilesystem constraint.

2007-05-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclNamesp.c:	Plugged memory leak related to 
	[namespace delete ::]. [Bug 1716782]

	* changes: updates for 8.4.15 release.

	* win/tclWinReg.c:		Bump to registry 1.1.5 to account
	* library/reg/pkgIndex.tcl:	for [1682211] bug fix.

2007-05-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclInt.h:     TclFinalizeThreadAlloc() is always defined,
	so make sure it is also always declared.

	[Tcl Bug 1706140]

	* generic/tclCmdMZ.c (Trace*Proc):	Update Tcl_VarTraceProcs so
	* generic/tclLink.c (LinkTraceProc):    that they call
	* generic/tclUtil.c (TclPrecTraceProc): Tcl_InterpDeleted() for
	themselves, and do not rely on (frequently buggy) setting of the
	TCL_INTERP_DESTROYED flag by the trace core.

	* generic/tclVar.c:     Update callers of CallVarTraces to not
	pass in the TCL_INTERP_DESTROYED flag.  Also apply filters so that
	public routines only pass documented flag values down to lower level
	routines.

	* generic/tclVar.c (CallVarTraces):        The setting of the
	TCL_INTERP_DESTROYED flag is now done entirely within the
	CallVarTraces routine, the only place it can be done right.

2007-04-30  Daniel Steffen  <das@users.sourceforge.net>
